name:          blog
version:       0.1.0.0
build-type:    Simple
cabal-version: >=1.10

executable blog
  main-is:            site.hs
  hs-source-dirs:     src
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
      base                  >=4 && <5
    , deriving-aeson
    , hakyll
    , mtl
    , pandoc
    , pandoc-sidenote
    , pandoc-types
    , process
    , text
    , time
    , unordered-containers

  ghc-options:        -threaded
  default-language:   Haskell2010
